# scenescape

./: Makefile  README.md  common.mk  deploy.sh  exclude_for_release.txt  third-party-programs.txt
.github/: dependabot.yml
.github/resources/: requirements.txt
.github/workflows/: auto-update.yml  bandit.yml  build-documentation.yml  clamav.yml  clean-runner.yml  codeql.yml  coverity.yml  docker-bench-security.yaml  docs-build.yml  gitleaks.yml  license.yml  lint.yml  scorecard.yml  tests-all.yml  tests-bat.yml  tracker-service.yaml  (+4 more)
autocalibration/: Dockerfile  Makefile  requirements-runtime.txt
cluster_analytics/: Dockerfile  requirements-runtime.txt
controller/: Dockerfile
dlstreamer-pipeline-server/: README.md  convert_video_to_ts.sh
kubernetes/: Makefile  README.md
manager/: Dockerfile  Makefile  requirements-runtime.txt
mapping/: 0001-Run-it-on-CPU.patch  Dockerfile  Makefile  mapanything-version-fix.patch  requirements_api.txt  requirements_mapanything.txt  requirements_vggt.txt
model_installer/: Dockerfile  Makefile
sample_data/: docker-compose-dl-streamer-example.yml  docker-compose-dls-perf.yml
scene_common/: Dockerfile
tests/: Makefile  Makefile.functional  Makefile.perf  Makefile.sscape  Makefile.user_interface  config.coveragerc  runtest
tools/: yaml_validator
tracker/: CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.txt
tracker/test/unit/: CMakeLists.txt  callback_guard_test.cpp  cli_test.cpp  config_loader_test.cpp  message_handler_test.cpp  mqtt_client_test.cpp  scene_registry_test.cpp  topic_utils_test.cpp
(+199 files in other folders)
